--- a/doc/examples/complex-workload/etcd.yaml
+++ b/doc/examples/complex-workload/etcd.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: etcd-workload
-  namespace: library
+  namespace: cnsbench-library
   labels:
     type: workload
 data:
@@ -11,7 +11,7 @@ data:
     kind: ConfigMap
     metadata:
       name: etcd-req-parser
-      namespace: library
+      namespace: cnsbench-library
       labels:
         type: parser
       annotations:
