--- a/doc/examples/quickstart/workload.yaml
+++ b/doc/examples/quickstart/workload.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: quickstart-filebench
-  namespace: library
+  namespace: cnsbench-library
   labels:
     type: workload
   annotations:
