Leave fields in quickstart pv.yaml blank that need to be filled in by user

--- a/doc/examples/quickstart/pv.yaml
+++ b/doc/examples/quickstart/pv.yaml
@@ -10,7 +10,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
   local:
-    path: /data/pv1
+    path:
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -18,4 +18,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kubes-worker
+          -
