Use basic-parser for quickstart demo, add quickstart svg, update README

--- a/doc/examples/quickstart/benchmark.yaml
+++ b/doc/examples/quickstart/benchmark.yaml
@@ -8,7 +8,7 @@ spec:
       workload: fio
       outputFiles:
       - filename: /output/output.json
-        parser: null-parser
+        parser: basic-parser
         target: workload
         sink: es
       vars:
