--- a/doc/examples/output/benchmark-null-parser.yaml
+++ b/doc/examples/output/benchmark-null-parser.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   workloads:
     - name: rw
-      workload: fio-test-workload
+      workload: example-fio-workload
       outputFiles:
       - filename: /output/output
         # Note that the null-parser is the default parser, so in this case the
