--- a/doc/examples/output/benchmark-single-value.yaml
+++ b/doc/examples/output/benchmark-single-value.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   workloads:
     - name: rw
-      workload: fio-test-workload
+      workload: example-fio-workload
       outputFiles:
       - filename: /output/output
         parser: fio-elapsed-time-parser
