--- a/doc/examples/output/fio.yaml
+++ b/doc/examples/output/fio.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: fio-test-workload
+  name: example-fio-workload
   namespace: cnsbench-library
   labels:
     type: workload
