--- a/deploy/cnsbench_operator.yaml
+++ b/deploy/cnsbench_operator.yaml
@@ -30,9 +30,6 @@ spec:
           spec:
             description: BenchmarkSpec defines the desired state of Benchmark
             properties:
-              allWorkloadOutput:
-                nullable: true
-                type: string
               controlOperations:
                 items:
                   properties:
@@ -75,6 +72,7 @@ spec:
                     name:
                       type: string
                     outputs:
+                      nullable: true
                       properties:
                         outputName:
                           type: string
@@ -100,12 +98,12 @@ spec:
                       description: Snapshots and deletions can operate on an individual object or a selector if a selector, then there may be multiple objects that match - should specify different policies for deciding which object to delete, e.g. "newest", "oldest", "random", ???
                       nullable: true
                       properties:
-                        actionName:
-                          nullable: true
-                          type: string
                         snapshotClass:
                           type: string
                         volumeName:
+                          nullable: true
+                          type: string
+                        workloadName:
                           nullable: true
                           type: string
                       required:
@@ -117,7 +115,12 @@ spec:
                 nullable: true
                 type: array
               metadataOutput:
+                default: defaultMetadataOutput
                 description: Output sink for the benchmark metadata, e.g. the spec and start and completion times
+                nullable: true
+                type: string
+              metricsOutput:
+                default: defaultMetricsOutput
                 nullable: true
                 type: string
               outputs:
@@ -135,6 +138,7 @@ spec:
                   required:
                   - name
                   type: object
+                nullable: true
                 type: array
               rates:
                 items:
@@ -170,12 +174,14 @@ spec:
                 nullable: true
                 type: array
               runtime:
+                nullable: true
                 type: string
               volumes:
                 items:
                   description: Creates PVCs with given name.  If count is provided, the name will be name-<volume number>.  Workloads that require volumes should parameterize the name of the volume, and the user should provide the name of a Volume as the value.
                   properties:
                     count:
+                      default: 1
                       nullable: true
                       type: integer
                     name:
@@ -279,6 +285,7 @@ spec:
                 items:
                   properties:
                     count:
+                      default: 1
                       nullable: true
                       type: integer
                     name:
@@ -290,14 +297,16 @@ spec:
                             description: Filename of output file, as it will exist inside the workload container
                             type: string
                           parser:
+                            default: null-parser
                             description: Name of parser configmap.  Defaults to the null-parser if not specified, which is a no-op.
                             nullable: true
                             type: string
                           sink:
-                            description: Name of output where the parsed file should be sent.  If not specifie, defaults to the "AllResultsOutput" setting.  It's an error if neither are set.
+                            default: defaultWorkloadsOutput
                             nullable: true
                             type: string
                           target:
+                            default: workload
                             description: If there are multiple resources created by the workload (e.g., client and server), target specifies which resource this is referring to.  See the workload spec's documentation to see what targets are available.  If none is specified, defaults to "workload"
                             nullable: true
                             type: string
@@ -325,6 +334,10 @@ spec:
                   type: object
                 nullable: true
                 type: array
+              workloadsOutput:
+                default: defaultWorkloadsOutput
+                nullable: true
+                type: string
             type: object
           status:
             description: BenchmarkStatus defines the observed state of Benchmark
@@ -450,9 +463,6 @@ spec:
           spec:
             description: BenchmarkSpec defines the desired state of Benchmark
             properties:
-              allWorkloadOutput:
-                nullable: true
-                type: string
               controlOperations:
                 items:
                   properties:
@@ -495,6 +505,7 @@ spec:
                     name:
                       type: string
                     outputs:
+                      nullable: true
                       properties:
                         outputName:
                           type: string
@@ -520,12 +531,12 @@ spec:
                       description: Snapshots and deletions can operate on an individual object or a selector if a selector, then there may be multiple objects that match - should specify different policies for deciding which object to delete, e.g. "newest", "oldest", "random", ???
                       nullable: true
                       properties:
-                        actionName:
-                          nullable: true
-                          type: string
                         snapshotClass:
                           type: string
                         volumeName:
+                          nullable: true
+                          type: string
+                        workloadName:
                           nullable: true
                           type: string
                       required:
@@ -537,7 +548,12 @@ spec:
                 nullable: true
                 type: array
               metadataOutput:
+                default: defaultMetadataOutput
                 description: Output sink for the benchmark metadata, e.g. the spec and start and completion times
+                nullable: true
+                type: string
+              metricsOutput:
+                default: defaultMetricsOutput
                 nullable: true
                 type: string
               outputs:
@@ -555,6 +571,7 @@ spec:
                   required:
                   - name
                   type: object
+                nullable: true
                 type: array
               rates:
                 items:
@@ -590,12 +607,14 @@ spec:
                 nullable: true
                 type: array
               runtime:
+                nullable: true
                 type: string
               volumes:
                 items:
                   description: Creates PVCs with given name.  If count is provided, the name will be name-<volume number>.  Workloads that require volumes should parameterize the name of the volume, and the user should provide the name of a Volume as the value.
                   properties:
                     count:
+                      default: 1
                       nullable: true
                       type: integer
                     name:
@@ -699,6 +718,7 @@ spec:
                 items:
                   properties:
                     count:
+                      default: 1
                       nullable: true
                       type: integer
                     name:
@@ -710,14 +730,16 @@ spec:
                             description: Filename of output file, as it will exist inside the workload container
                             type: string
                           parser:
+                            default: null-parser
                             description: Name of parser configmap.  Defaults to the null-parser if not specified, which is a no-op.
                             nullable: true
                             type: string
                           sink:
-                            description: Name of output where the parsed file should be sent.  If not specifie, defaults to the "AllResultsOutput" setting.  It's an error if neither are set.
+                            default: defaultWorkloadsOutput
                             nullable: true
                             type: string
                           target:
+                            default: workload
                             description: If there are multiple resources created by the workload (e.g., client and server), target specifies which resource this is referring to.  See the workload spec's documentation to see what targets are available.  If none is specified, defaults to "workload"
                             nullable: true
                             type: string
@@ -745,6 +767,10 @@ spec:
                   type: object
                 nullable: true
                 type: array
+              workloadsOutput:
+                default: defaultWorkloadsOutput
+                nullable: true
+                type: string
             type: object
           status:
             description: BenchmarkStatus defines the observed state of Benchmark
