Updates for scaling control ops

--- a/config/crd/bases/cnsbench.example.com_benchmarks.yaml
+++ b/config/crd/bases/cnsbench.example.com_benchmarks.yaml
@@ -109,12 +109,18 @@ spec:
                       nullable: true
                       properties:
                         objName:
+                          nullable: true
                           type: string
-                        scriptConfigMap:
+                        scaleScripts:
+                          nullable: true
+                          type: string
+                        serviceAccountName:
+                          type: string
+                        workloadName:
+                          nullable: true
                           type: string
                       required:
-                      - objName
-                      - scriptConfigMap
+                      - serviceAccountName
                       type: object
                     snapshotSpec:
                       description: Snapshots and deletions can operate on an individual
